# openfe

./: .coveragerc  .dockerignore  .duecredit.p  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  Code_of_Conduct.md  LICENSE  MANIFEST.in  README.md  conftest.py  environment.yml  pyproject.toml  readthedocs.yml  rever.xsh  setup.cfg
.github/: CONTRIBUTING.md  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: release_template.md
.github/workflows/: aws-cpu-long-tests.yaml  aws-gpu-integration-tests.yaml  change.yaml  check_for_api_break.yaml  ci.yaml  clean-pr-caches.yaml  clean_cache.yaml  conda_cron.yaml  cpu-long-tests.yaml  cpu-runner.yaml  cron-conda.yaml  cron-docker.yaml  cron-feedstock-build-tests.yaml  cron-package-test.yaml  docker-cron.yaml  docker.yaml  gen-lock-file.yaml  gpu-integration-tests.yaml  gpu-runner.yaml  griffe-api-break-check.yaml  griffe-api-break-comment.yaml  griffe-api-break.yaml  installer.yaml  mypy.yaml  package-tests.yaml  package_test_cron.yaml  release-docker-image.yaml  release-installers.yaml  release-make-condalock.yaml  release-prep-examplenotebooks.yaml  release-prep-feedstock-build-tests.yaml  release-prep-feedstock.yaml  test-example-notebooks.yaml  test-feedstock-pkg-build.yaml
devtools/: debug_openmm.sh
devtools/data/: ABFEProtocol_json_results.json  fix_rbfe_results.py  gen-serialized-results.py  gen_serialized_results.py
devtools/installer/: construct.yaml
devtools/qa/: qa.py
devtools/scripts/: build_cookiecutter_json.py
docs/: CHANGELOG.rst  Makefile  api.rst  conf.py  docs_build.yaml  dumping_transformation.rst  environment.yaml  environment.yml  index.rst  installation.rst  mambaf9t4jj8g5ei  new.txt  requirements.txt  setup.md  workflow.rst
docs/_ext/: sass.py
docs/_sass/: custom-api.scss  deflist-flowchart.scss
docs/api/: alchemical_network_planning.rst  ligand_network.rst
docs/cli/: index.rst  plan_rbfe_network.rst  plan_rhfe_network.rst  quickrun.rst
docs/cookbook/: bespoke_parameters.nblink  choose_protocol.nblink  create_alchemical_network.nblink  creating_atom_mappings.rst  creating_mappings.md  creating_mappings.rst  dumping_transformation.rst  generate_ligand_network.nblink  hand_write_ligand_network.nblink  index.rst  jq_inspection.rst  ligandnetwork_vis.nblink  load_ligand_network.nblink  loading_molecules.md  loading_molecules.nblink  loading_molecules.rst  network_from_orion_fepp.nblink  rfe_alchemical_planners.nblink  under_the_hood.rst  user_charges.nblink  writing_transformation_json.rst
docs/getting_started/: creating_mappings.md  index.rst  loading_molecules.md  working_with_protocols.md
docs/guide/: cli.rst  hpc.rst  index.rst  introduction.rst  troubleshooting.rst  under_the_hood.rst
docs/protocols/: index.rst  openmm_afe.rst
docs/reference/: index.rst
docs/setup/: customizing_rsfe.rst  index.rst
docs/tutorials/: .gitignore  abfe_analysis_tutorial.nblink  abfe_tutorial.nblink  ahfe_tutorial.nblink  charge_molecules_cli_tutorial.rst  index.rst  md_tutorial.nblink  plotting_with_cinnabar.nblink  rbfe_cli_tutorial.rst  rbfe_membrane_protein.nblink  rbfe_python_tutorial.nblink  septop_analysis_tutorial.nblink  septop_tutorial.nblink  showcase_notebook.nblink
news/: 1112_gather_check_json.rst  986_input_validation.rst  abfe_host_smc.rst  abfe_protocol.rst  abfe_user_dfn_restraints.rst  absolute_settings.rst  add_debug_script.rst  add_filepaths_support.rst  add_jq_docs.rst  add_lomap_network_generator_to_cli.rst  add_n_protocol_repeats.rst  add_rever.rst  afe-uuid.rst  afe_box.rst  ahfe_nocharged.rst  analysis-septop.rst  change_cli_mapper_to_kartograf.rst  checkpoint.rst  cinnabar-update.rst  cli_adaptive_charge_settings.rst  cli_charge_molecules.rst  cli_docs.rst  cli_responsiveness.rst  cmap_support.rst  compute_selection_fixes.rst  constraints_error_message.rst  convergence_analysis.rst  cuda.rst  deprecate_3dviz.rst  deprecate_alchemical_charge_diff.rst  deprecate_perses.rst  disable_oechem_nagl.rst  disable_structural_analysis.rst  drop_macos_x86_64.rst  error_handling_for_single_repeat_dgs.rst  expect_nagl.rst  failed_sims_passthrough.rst  fix-setup-messages.rst  fix_abfe_gather.rst  fix_cli_lag.rst  (+66 more)
openfe/: .duecredit.p  __init__.py  _version.py  due.py
openfe/analysis/: __init__.py  plotting.py
openfe/orchestration/: __init__.py
openfe/protocols/: __init__.py  settings.py
openfe/setup/: __init__.py  _parallel_mapping_pattern.py  alchemical_molecule.py  atommapper.py  atommapping.py  box_representation.py  easyCampaign.py  errors.py  ligand_network.py  ligand_network_planning.py  ligandatommapper.py  ligandatommapping.py  ligandmolecule.py  ligandnetwork.py  load_molecules.py  lomap_mapper.py  lomap_scorers.py  molecule.py  network.py  network_planning.py  perses_mapper.py  perses_scorers.py  protein_molecule.py  rbfe_methods.py  scorer.py  system.py  utils.py
openfe/storage/: __init__.py  metadatastore.py  resultclient.py  resultserver.py  warehouse.py
openfe/tests/: .model.pt  conftest.py  helpers.py  test_imports.py
openfe/utils/: __init__.py  atommapping_network_plotting.py  context_managers.py  custom_typing.py  errors.py  handle_trajectories.py  integration_tools.py  konnektor_graph_viz.py  ligand_network_plotting.py  ligand_utils.py  logging_control.py  logging_filter.py  molhashing.py  network_plotting.py  optional_imports.py  remove_oechem.py  silence_root_logging.py  system_probe.py  typing.py  visualization.py  visualization_3D.py
openfecli/: __init__.py  _version.py  analysis.ipynb  cli.py  fetchables.py  fetching.py  plan_alchemical_networks_utils.py  plugins.py  quickrun_result.py  utils.py
openfecli/clicktypes/: __init__.py  hyphenchoice.py
openfecli/commands/: README.md  __init__.py  atommapping.py  echo.py  fetch.py  gather.py  gather_abfe.py  gather_septop.py  generate_partial_charges.py  input.yaml  inspect_result.py  ligand_network_viewer.py  peek.py  plan_network_schema.py  plan_rbfe_campaign.py  (+9 more)
production/: Dockerfile  environment.yml
(+681 files in other folders)
