[build-system]
requires = [
	"setuptools>=61.2",
	"versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "openfe"
description = ""
readme = "README.md"
authors = [{name = "The OpenFE developers", email = "openfe@omsf.io"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
urls = {Homepage = "https://github.com/OpenFreeEnergy/openfe"}
requires-python = ">= 3.9"
dependencies = [
    "numpy",
    "networkx",
    "click",
    "plugcli",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
]

[project.scripts]
openfe = "openfecli.cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
openfe = ['"./openfe/tests/data/lomap_basic/toluene.mol2"']

[tool.mypy]
files = "openfe"
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "openfe/due.py",
    "*/tests/dev/*py",
    "*/tests/protocols/test_openmm_rfe_slow.py"
]

[tool.coverage.report]
exclude_lines = [
    'if __name__ == "__main__"',
    "pragma: no cover",
    "pragma: no-cover",
    "-no-cov",
    "raise NotImplementedError",
]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "0.0.0"

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
profile = "black"
known_first_party = ["openfe"]

[tool.interrogate]
fail-under = 0
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
# possible values: 0 (minimal output), 1 (-v), 2 (-vv)
verbose = 2
color = true
exclude = ["build", "docs"]
