[build-system]
build-backend = "setuptools.build_meta"

requires = [
  "setuptools>=77.0.3",
  "setuptools-scm>=8",
]

[project]
name = "openfe"
description = ""
readme = "README.md"
license = "MIT"
authors = [ { name = "The OpenFE developers", email = "openfe@omsf.io" } ]
requires-python = ">=3.11"

classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dynamic = [ "version" ]

urls = { Homepage = "https://github.com/OpenFreeEnergy/openfe" }
scripts.openfe = "openfecli.cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = [ "LICENSE" ]

[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools.package-data]
openfe = [ '"./openfe/tests/data/lomap_basic/toluene.mol2"' ]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.coverage.run]
omit = [
  "openfe/due.py",
  "*/tests/dev/*py",
  "*/tests/protocols/test_openmm_rfe_slow.py",
]

[tool.coverage.report]
exclude_lines = [
  'if __name__ == "__main__"',
  "pragma: no cover",
  "pragma: no-cover",
  "-no-cov",
  "raise NotImplementedError",
]

[tool.mypy]
files = "openfe"
ignore_missing_imports = true
warn_unused_ignores = true
