[metadata]
name = openfe
version = 0.0.1.dev0
description = 
long_description = file: README.md
long_description_type = text/markdown
author = The OpenFE developers
author_email = openfe@omsf.io
license = MIT
license-file = LICENSE
url = https://github.com/OpenFreeEnergy/openfe
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry

[options]
python_requires = >= 3.8
install_requires =
    numpy
    networkx
    rdkit-pypi

include_package_data = True
namespace_packages = openfe

[options.extras_require]
test =
    pytest
    pytest-xdist

[bdist_wheel]
universal = 1
