[metadata]
name = openfe
description = 
long_description = file: README.md
long_description_type = text/markdown
author = The OpenFE developers
author_email = openfe@omsf.io
license = MIT
license_file = LICENSE
url = https://github.com/OpenFreeEnergy/openfe
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry

[options]
zip_safe = False
python_requires = >= 3.8
install_requires =
    numpy
    networkx

include_package_data = True
packages = find:

[options.package_data]
openfe = "./openfe/tests/data/lomap_basic/toluene.mol2"

[options.extras_require]
test =
    pytest
    pytest-xdist

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440-post
versionfile_source = openfe/_version.py
versionfile_build = openfe/_version.py
tag_prefix = ''
